[gd_scene load_steps=2 format=3 uid="uid://bkwhlqpmokdjc"]

[ext_resource type="Script" path="res://HurtBox/hurt_box.gd" id="1_ygwig"]

[node name="HurtBox" type="Area2D"]
collision_layer = 16
collision_mask = 0
monitoring = false
script = ExtResource("1_ygwig")

[node name="BufferTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="timeout" from="BufferTimer" to="." method="_on_buffer_timer_timeout"]
